changed java version from 22 to 8