@@ -20,7 +20,7 @@ final class Parser {
     private int line;
 
     public HashMap<String, Compilable> parseFile(File file) throws IllegalArgumentException{
-        if(!file.exists()) throw new IllegalArgumentException(STR."File \{file.getPath()} did not exist");
+        if(!file.exists()) throw new IllegalArgumentException("File "+file.getPath()+" did not exist");
 
         try{
             path = file.getPath().substring(0, file.getPath().length() - file.getName().length() - 1);
@@ -28,10 +28,10 @@ final class Parser {
             classes = new HashMap<>();
             uses = new HashMap<>();
             sc = new Scanner(file);
-            statik = new KtjClass(new Modifier(AccessFlag.ACC_PUBLIC), uses, STR."\{path}\\\{name}", -1);
+            statik = new KtjClass(new Modifier(AccessFlag.ACC_PUBLIC), uses, path+"\\"+name, -1);
             line = 0;
         }catch(FileNotFoundException ignored){
-            throw new IllegalArgumentException(STR."Unable to find \{file.getPath()}");
+            throw new IllegalArgumentException("Unable to find "+file.getPath());
         }
 
         while(sc.hasNextLine()){
@@ -39,11 +39,17 @@ final class Parser {
 
             if(!th.isEmpty()){
                 try {
-                    switch (th.next().s()) {
-                        case "#" -> {}
-                        case "use" -> parseUse();
-                        case "main" -> parseMain();
-                        default -> parseModifier(null);
+                    switch (th.next().s) {
+                        case "use":
+                            parseUse();
+                        case "#":
+                            break;
+                        case "main":
+                            parseMain();
+                            break;
+                        default:
+                            parseModifier(null);
+                            break;
                     }
                 }catch(RuntimeException e){
                     if(e.getMessage().contains(" at ")) throw e;
@@ -59,24 +65,24 @@ final class Parser {
             }
         }
 
-        if(!statik.isEmpty()) classes.put(classes.isEmpty() ? name : STR."_\{name}", statik);
+        if(!statik.isEmpty()) classes.put(classes.isEmpty() ? name : "_"+name, statik);
 
         if(classes.size() == 1 && name.equals(classes.keySet().toArray(new String[0])[0])){
             String name = classes.keySet().toArray(new String[0])[0];
             Compilable clazz = classes.remove(name);
-            classes.put(CompilerUtil.validateClassName(STR."\{path}.\{name}"), clazz);
+            classes.put(CompilerUtil.validateClassName(path+"."+name), clazz);
 
-            if(uses.containsKey(name)) err(STR.".\{name} is already defined");
-            uses.put(name, STR."\{CompilerUtil.validateClassName(path)}.\{name}");
+            if(uses.containsKey(name)) err("."+name+" is already defined");
+            uses.put(name, CompilerUtil.validateClassName(path)+"."+name);
         }else{
             HashMap<String, Compilable> help = new HashMap<>();
 
             for(String clazz: classes.keySet()){
-                help.put(CompilerUtil.validateClassName(STR."\{path}.\{name}.\{clazz}"), classes.get(clazz));
+                help.put(CompilerUtil.validateClassName(path+"."+name+"."+clazz), classes.get(clazz));
 
                 path = CompilerUtil.validateClassName(path);
-                if(uses.containsKey(clazz)) err(STR.".\{clazz} is already defined");
-                uses.put(clazz, STR."\{path}.\{name}.\{clazz}");
+                if(uses.containsKey(clazz)) err("."+clazz+" is already defined");
+                uses.put(clazz, path+"."+name+"."+clazz);
             }
 
             classes = help;
@@ -86,7 +92,7 @@ final class Parser {
     }
 
     private void parseUse(){
-        String current = th.assertToken(Token.Type.IDENTIFIER).s();
+        String current = th.assertToken(Token.Type.IDENTIFIER).s;
 
         if(th.assertToken("/", "from", ",").equals("/")){
             StringBuilder path = new StringBuilder(current);
@@ -95,37 +101,37 @@ final class Parser {
 
             while (th.hasNext()){
                 if(th.assertToken("/", "as").equals("as")){
-                    if(uses.containsKey(th.assertToken(Token.Type.IDENTIFIER).s())) err(STR."\{th.current()} is already defined");
-                    uses.put(th.current().s(), path.toString());
+                    if(uses.containsKey(th.assertToken(Token.Type.IDENTIFIER).s)) err(th.current()+" is already defined");
+                    uses.put(th.current().s, path.toString());
                 }else{
-                    current = th.assertToken(Token.Type.IDENTIFIER).s();
+                    current = th.assertToken(Token.Type.IDENTIFIER).s;
                     path.append("/").append(current);
                 }
             }
 
-            if(uses.containsKey(current)) err(STR."\{current} is already defined");
+            if(uses.containsKey(current)) err(current+" is already defined");
             uses.put(current, path.toString().replace("/", "."));
         }else{
             ArrayList<String> classes = new ArrayList<>();
             classes.add(current);
 
             if(th.current().equals(",")){
-                classes.add(th.assertToken(Token.Type.IDENTIFIER).s());
+                classes.add(th.assertToken(Token.Type.IDENTIFIER).s);
                 th.assertToken(",", "from");
             }
 
-            StringBuilder path = new StringBuilder(th.assertToken(Token.Type.IDENTIFIER).s());
+            StringBuilder path = new StringBuilder(th.assertToken(Token.Type.IDENTIFIER).s);
 
             while (th.hasNext()){
                 if(th.assertToken("/", "as").equals("as")){
                     if(classes.size() != 1) err("illegal argument");
-                    if(uses.containsKey(th.assertToken(Token.Type.IDENTIFIER).s())) err(STR."\{th.current()} is already defined");
-                    uses.put(th.current().s(), (path + classes.getFirst()).replace("/", "."));
-                }else path.append("/").append(th.assertToken(Token.Type.IDENTIFIER).s());
+                    if(uses.containsKey(th.assertToken(Token.Type.IDENTIFIER).s)) err(th.current()+" is already defined");
+                    uses.put(th.current().s, (path + classes.get(0)).replace("/", "."));
+                }else path.append("/").append(th.assertToken(Token.Type.IDENTIFIER).s);
             }
 
             for(String clazz:classes){
-                if(uses.containsKey(clazz)) err(STR."\{clazz} is already defined");
+                if(uses.containsKey(clazz)) err(clazz+" is already defined");
                 uses.put(clazz, path.toString().replace("/", "."));
             }
         }
@@ -139,7 +145,7 @@ final class Parser {
 
             Modifier mod = new Modifier(AccessFlag.ACC_PUBLIC);
             mod.statik = true;
-            addMethod("main%[_String", new KtjMethod(mod, "void", code.toString(), new KtjMethod.Parameter[]{new KtjMethod.Parameter("[_String", "args")}, uses, STR."\{path}\\\{name}", line));
+            addMethod("main%[_String", new KtjMethod(mod, "void", code.toString(), new KtjMethod.Parameter[]{new KtjMethod.Parameter("[_String", "args")}, uses, path+"\\"+name, line));
             uses.put("_String", "java.lang.String");
             return;
         }
@@ -156,27 +162,27 @@ final class Parser {
             nextLine();
 
             if (th.isEmpty()) code.append("\n");
-            else if (th.next().s().equals("}")) {
+            else if (th.next().s.equals("}")) {
                 if(!th.hasNext() || !th.next().equals("else")) {
                     i--;
 
                     if (i > 0) {
-                        if (!code.isEmpty()) code.append("\n");
+                        if (!(code.length() == 0)) code.append("\n");
                         code.append(th.toStringNonMarked());
                     } else {
                         Modifier mod = new Modifier(AccessFlag.ACC_PUBLIC);
                         mod.statik = true;
-                        addMethod("main%[_String", new KtjMethod(mod, "void", code.toString(), new KtjMethod.Parameter[]{new KtjMethod.Parameter("[_String", "args")}, uses, STR."\{path}\\\{name}", _line));
+                        addMethod("main%[_String", new KtjMethod(mod, "void", code.toString(), new KtjMethod.Parameter[]{new KtjMethod.Parameter("[_String", "args")}, uses, path+"\\"+name, _line));
                         uses.put("_String", "java.lang.String");
                         return;
                     }
                 }else{
-                    if (!code.isEmpty()) code.append("\n");
+                    if (!(code.length() == 0)) code.append("\n");
                     code.append(th.toStringNonMarked());
                 }
             }else{
-                if(Set.of("if", "while").contains(th.current().s())) i++;
-                if (!code.isEmpty()) code.append("\n");
+                if(th.current().s.equals("if") || th.current().s.equals("while")) i++;
+                if (!(code.length() == 0)) code.append("\n");
                 code.append(th.toStringNonMarked());
             }
         }
@@ -190,73 +196,94 @@ final class Parser {
             return;
         }
 
-        Modifier mod = switch (th.current().s()){
-            case "public" -> new Modifier(AccessFlag.ACC_PUBLIC);
-            case "private" -> new Modifier(AccessFlag.ACC_PRIVATE);
-            case "protected" -> new Modifier(AccessFlag.ACC_PROTECTED);
-            default -> {
-                th.last();
-                yield new Modifier(AccessFlag.ACC_PACKAGE_PRIVATE);
-            }
-        };
-        Set<String> modifier = Set.of("final", "abstract", "static", "synchronised", "const");
+        Modifier mod = new Modifier(AccessFlag.ACC_PACKAGE_PRIVATE);
 
-        while (modifier.contains(th.next().s())){
-            switch (th.current().s()){
-                case "final" -> {
-                    if(mod.finaly) err(STR."modifier \{th.current().s()} is not allowed");
+        switch (th.current().s){
+            case "public":
+                mod = new Modifier(AccessFlag.ACC_PUBLIC);
+                break;
+            case "private":
+                mod = new Modifier(AccessFlag.ACC_PRIVATE);
+                break;
+            case "protected":
+                mod = new Modifier(AccessFlag.ACC_PROTECTED);
+                break;
+            default:
+                th.last();
+                break;
+        }
+
+        Set<String> modifier = new HashSet<>();
+        modifier.add("final");
+        modifier.add("abstract");
+        modifier.add("static");
+        modifier.add("synchronised");
+        modifier.add("const");
+
+        while (modifier.contains(th.next().s)){
+            switch (th.current().s){
+                case "final":
+                    if(mod.finaly) err("modifier "+th.current().s+" is not allowed");
                     mod.finaly = true;
-                }
-                case "abstract" -> {
-                    if(mod.abstrakt) err(STR."modifier \{th.current().s()} is not allowed");
+                    break;
+                case "abstract":
+                    if(mod.abstrakt) err("modifier "+th.current().s+" is not allowed");
                     mod.abstrakt = true;
-                }
-                case "static" -> {
-                    if(mod.statik) err(STR."modifier \{th.current().s()} is not allowed");
+                    break;
+                case "static":
+                    if(mod.statik) err("modifier "+th.current().s+" is not allowed");
                     mod.statik = true;
-                }
-                case "synchronised" -> {
-                    if(mod.synchronised) err(STR."modifier \{th.current().s()} is not allowed");
+                    break;
+                case "synchronised":
+                    if(mod.synchronised) err("modifier "+th.current().s+" is not allowed");
                     mod.synchronised = true;
-                }
-                case "const" -> {
-                    if(mod.constant) err(STR."modifier \{th.current().s()} is not allowed");
+                    break;
+                case "const":
+                    if(mod.constant) err("modifier "+th.current().s+" is not allowed");
                     mod.constant = true;
-                }
+                    break;
             }
         }
         th.last();
 
         if(clazzName == null) {
-            switch (th.assertToken(Token.Type.IDENTIFIER).s()) {
-                case "class" -> parseClass(mod);
-                case "interface" -> parseInterface(mod);
-                case "data" -> parseData(mod);
-                case "type" -> parseType(mod);
-                default -> {
+            switch (th.assertToken(Token.Type.IDENTIFIER).s) {
+                case "class":
+                    parseClass(mod);
+                    break;
+                case "interface":
+                    parseInterface(mod);
+                    break;
+                case "data":
+                    parseData(mod);
+                    break;
+                case "type":
+                    parseType(mod);
+                    break;
+                default:
                     th.last();
                     parseMethodAndField(mod, null);
-                }
+                    break;
             }
         }else parseMethodAndField(mod, clazzName);
     }
 
     private void parseClass(Modifier modifier){
-        String name = th.assertToken(Token.Type.IDENTIFIER).s();
+        String name = th.assertToken(Token.Type.IDENTIFIER).s;
 
-        if(classes.containsKey(name)) err(STR."Class \{name} is already defined");
+        if(classes.containsKey(name)) err("Class "+name+" is already defined");
 
         th.assertToken("{");
         th.assertNull();
 
-        KtjClass clazz = new KtjClass(modifier, uses, STR."\{path}\\\{name}", line);
+        KtjClass clazz = new KtjClass(modifier, uses, path+"\\"+name, line);
         current = clazz;
 
         while (sc.hasNextLine()){
             nextLine();
 
             if(!th.isEmpty()){
-                if (th.next().s().equals("}")) {
+                if (th.next().s.equals("}")) {
                     current = null;
                     th.assertNull();
                     classes.put(name, clazz);
@@ -274,7 +301,7 @@ final class Parser {
         if(!modifier.isValidForData()) err("illegal modifier");
 
         String name = parseName();
-        KtjDataClass clazz = new KtjDataClass(modifier, uses, STR."\{path}\\\{name}", line);
+        KtjDataClass clazz = new KtjDataClass(modifier, uses, path+"\\"+name, line);
 
         th.assertToken("=");
         th.assertToken("(");
@@ -283,7 +310,7 @@ final class Parser {
             th.last();
 
             while (th.hasNext()) {
-                if (clazz.addField(th.assertToken(Token.Type.IDENTIFIER).s(), th.assertToken(Token.Type.IDENTIFIER).s(), line))
+                if (clazz.addField(th.assertToken(Token.Type.IDENTIFIER).s, th.assertToken(Token.Type.IDENTIFIER).s, line))
                     err("field is already defined");
 
                 if (th.hasNext()){
@@ -307,16 +334,16 @@ final class Parser {
         th.assertToken("=");
 
         ArrayList<String> types = new ArrayList<>();
-        types.add(th.assertToken(Token.Type.IDENTIFIER).s());
+        types.add(th.assertToken(Token.Type.IDENTIFIER).s);
 
         while (th.hasNext()){
             th.assertToken("|");
-            String type = th.assertToken(Token.Type.IDENTIFIER).s();
+            String type = th.assertToken(Token.Type.IDENTIFIER).s;
 
             if(!types.contains(type)) types.add(type);
         }
 
-        classes.put(name, new KtjTypeClass(modifier, types.toArray(new String[0]), uses, STR."\{path}\\\{name}", line));
+        classes.put(name, new KtjTypeClass(modifier, types.toArray(new String[0]), uses, path+"\\"+name, line));
     }
 
     private void parseInterface(Modifier modifier){
@@ -326,14 +353,14 @@ final class Parser {
 
         th.assertToken("{");
 
-        KtjInterface clazz = new KtjInterface(modifier, uses, STR."\{path}\\\{name}", line);
+        KtjInterface clazz = new KtjInterface(modifier, uses, path+"\\"+name, line);
         current = clazz;
 
         while (sc.hasNextLine()){
             nextLine();
 
             if(!th.isEmpty()){
-                if(th.next().s().equals("}")){
+                if(th.next().s.equals("}")){
                     current = null;
                     th.assertNull();
                     classes.put(name, clazz);
@@ -346,21 +373,21 @@ final class Parser {
     }
 
     private String parseName(){
-        String name = th.assertToken(Token.Type.IDENTIFIER).s();
+        String name = th.assertToken(Token.Type.IDENTIFIER).s;
 
-        if(classes.containsKey(name)) err(STR."Type Class \{name} is already defined");
+        if(classes.containsKey(name)) err("Type Class "+name+" is already defined");
 
         return name;
     }
 
     private void parseMethodAndField(Modifier mod, String clazzName){
-        String type = th.assertToken(Token.Type.IDENTIFIER).s();
-        String name = th.assertToken(Token.Type.IDENTIFIER, Token.Type.OPERATOR, "[", "(").s();
+        String type = th.assertToken(Token.Type.IDENTIFIER).s;
+        String name = th.assertToken(Token.Type.IDENTIFIER, Token.Type.OPERATOR, "[", "(").s;
 
         while(name.equals("[")){
             th.assertToken("]");
-            type = STR."[\{type}";
-            name = th.assertToken(Token.Type.IDENTIFIER, Token.Type.OPERATOR, "[").s();
+            type = "["+type;
+            name = th.assertToken(Token.Type.IDENTIFIER, Token.Type.OPERATOR, "[").s;
         }
 
         if(name.equals("(")){
@@ -383,20 +410,20 @@ final class Parser {
             th.assertHasNext();
 
             while(th.hasNext()){
-                sb.append(th.next().s()).append(" ");
+                sb.append(th.next().s).append(" ");
                 if(th.current().equals(";") && th.hasNext()) throw new RuntimeException("illegal argument");
             }
 
             initValue = sb.toString();
         }
 
-        if(mod.finaly && initValue == null) throw new RuntimeException(STR."Expected init value for constant field \{name}");
+        if(mod.finaly && initValue == null) throw new RuntimeException("Expected init value for constant field "+name);
 
         if(current == null){
             mod.statik = true;
-            if(statik.addField(name, new KtjField(mod, type, initValue, uses, STR."\{path}\\\{name}", line))) err("field is already defined");
+            if(statik.addField(name, new KtjField(mod, type, initValue, uses, path+"\\"+name, line))) err("field is already defined");
         }else if(current instanceof KtjClass){
-            if(((KtjClass) current).addField(name, new KtjField(mod, type, initValue, uses, STR."\{path}\\\{name}", line))) err("field is already defined");
+            if(((KtjClass) current).addField(name, new KtjField(mod, type, initValue, uses, path+"\\"+name, line))) err("field is already defined");
         }else throw new RuntimeException("illegal argument");
     }
 
@@ -416,16 +443,16 @@ final class Parser {
         int _line = line;
 
         while(parameterList.hasNext()){
-            String pType = parameterList.assertToken(Token.Type.IDENTIFIER).s();
-            String pName = parameterList.assertToken(Token.Type.IDENTIFIER, "[").s();
+            String pType = parameterList.assertToken(Token.Type.IDENTIFIER).s;
+            String pName = parameterList.assertToken(Token.Type.IDENTIFIER, "[").s;
 
             while(pName.equals("[")){
                 parameterList.assertToken("]");
-                pType = STR."[\{pType}";
-                pName = parameterList.assertToken(Token.Type.IDENTIFIER, "[").s();
+                pType = "["+pType;
+                pName = parameterList.assertToken(Token.Type.IDENTIFIER, "[").s;
             }
 
-            for(KtjMethod.Parameter p:parameter) if(pName.equals(p.name())) err(STR."Method \{pName} is already defined");
+            for(KtjMethod.Parameter p:parameter) if(pName.equals(p.name)) err("Method "+pName+" is already defined");
 
             parameter.add(new KtjMethod.Parameter(pType, pName));
 
@@ -436,11 +463,11 @@ final class Parser {
         }
 
         StringBuilder desc = new StringBuilder(name);
-        for(KtjMethod.Parameter p:parameter) desc.append(STR."%\{p.type()}");
+        for(KtjMethod.Parameter p:parameter) desc.append("%"+p.type);
 
         if(mod.abstrakt){
             th.assertNull();
-            addMethod(desc.toString(), new KtjMethod(mod, type, null, new KtjMethod.Parameter[0], uses, STR."\{path}\\\{name}", _line));
+            addMethod(desc.toString(), new KtjMethod(mod, type, null, new KtjMethod.Parameter[0], uses, path+"\\"+name, _line));
         }else if(th.isNext("{")){
             th.assertToken("{");
             th.assertNull();
@@ -452,26 +479,26 @@ final class Parser {
                 nextLine();
 
                 if (th.isEmpty()) code.append("\n");
-                else if (th.next().s().equals("}")) {
+                else if (th.next().s.equals("}")) {
                     if(!th.hasNext() || !th.next().equals("else")) {
                         i--;
 
                         if(i > 0){
-                            if (!code.isEmpty()) code.append("\n");
+                            if (!(code.length() == 0)) code.append("\n");
                             code.append(th.toStringNonMarked());
                         }else{
                             if(Lexer.isOperator(name.toCharArray()[0])) if(parameter.size() > 1) throw new RuntimeException("To many parameters");
 
-                            addMethod(desc.toString(), new KtjMethod(mod, type, code.toString(), parameter.toArray(new KtjMethod.Parameter[0]), uses, STR."\{path}\\\{name}", _line));
+                            addMethod(desc.toString(), new KtjMethod(mod, type, code.toString(), parameter.toArray(new KtjMethod.Parameter[0]), uses, path+"\\"+name, _line));
                             return;
                         }
                     }else{
-                        if (!code.isEmpty()) code.append("\n");
+                        if (!(code.length() == 0)) code.append("\n");
                         code.append(th.toStringNonMarked());
                     }
                 }else{
-                    if(Set.of("if", "while").contains(th.current().s())) i++;
-                    if (!code.isEmpty()) code.append("\n");
+                    if(th.current().s.equals("if") || th.current().s.equals("while")) i++;
+                    if (!(code.length() == 0)) code.append("\n");
                     code.append(th.toStringNonMarked());
                 }
             }
@@ -484,7 +511,7 @@ final class Parser {
 
             while(th.hasNext()) code.append(" ").append(th.next());
 
-            addMethod(desc.toString(), new KtjMethod(mod, type, code.toString(), parameter.toArray(new KtjMethod.Parameter[0]), uses, STR."\{path}\\\{name}", _line));
+            addMethod(desc.toString(), new KtjMethod(mod, type, code.toString(), parameter.toArray(new KtjMethod.Parameter[0]), uses, path+"\\"+name, _line));
         }
     }
 
@@ -511,6 +538,6 @@ final class Parser {
     }
 
     private void err(String message) throws RuntimeException{
-        throw new RuntimeException(STR."\{message} at \{path}\\\{name}:\{line}");
+        throw new RuntimeException(message+" at "+path+"\\"+name+":"+line);
     }
 }
